# ratect

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  ROADMAP.md  SECURITY.md  TODO.md  batect.yml
.claude/: settings.json
.github/workflows/: ci.yml  dco.yml
dev-env/: Dockerfile
dockerignore/: Cargo.toml
dockerignore/src/: lib.rs  pattern.rs
docs/: cli-reference.md  config-reference.md  differences-from-batect.md  getting-started.md  how-it-works.md  installation.md  ratect-cli.md  task-lifecycle.md
ratect/: Cargo.toml
ratect-compat/: Cargo.toml
ratect-compat/src/: main.rs
ratect-compat/tests/: cli.rs  conformance.rs  volume_cleanup.rs
ratect-compat/tests/conformance/: README.md
ratect-compat/tests/fixtures/: additional-args.yml  build-customization.yml  build.yml  capabilities.yml  devices.yml  enable-init-process.yml  environment.yml  include.yml  labels.yml  no-image.yml  project-directory-declared.yml  ssh-agent-socket.yml  task-container-setup-commands.yml  tmpfs.yml  unhealthy-dependency.yml  working-directory.yml
ratect-compat/tests/fixtures/build-buildkit-default/: Dockerfile
ratect-compat/tests/fixtures/build-failure/: Dockerfile
ratect-compat/tests/fixtures/build-with-dockerignore/: .dockerignore  Dockerfile
ratect-compat/tests/fixtures/build-with-dockerignore/nested/: secret.txt
ratect-compat/tests/fixtures/include/: extra.yml
ratect-core/: Cargo.toml
ratect-core/src/: cache.rs  config.rs  docker.rs  engine.rs  expressions.rs  git_include.rs  labels.rs  lib.rs  proxy.rs  schema.rs  user.rs
ratect-core/src/ui/: fancy.rs  interleaved.rs  mod.rs  simple.rs
ratect/src/: main.rs
ratect/tests/: cli.rs
ratect/tests/fixtures/: cache.yml  labels.yml  resources.yml  tasks.yml
schema/: batect-config.schema.json
src/: config.rs  docker.rs  engine.rs  main.rs
tests/: cli.rs
tests/fixtures/: additional-args.yml  additional-hostnames-and-hosts.yml  build-buildkit-default.yml  build-failure-buildkit.yml  build-failure.yml  build-secrets.yml  build-ssh.yml  build-with-dockerignore.yml  build.yml  config-vars.yml  entrypoint.yml  environment.yml  exit-code.yml  interactive.yml  ports.yml  privileged.yml  project-directory.yml  proxy.yml  shm-size.yml  sidecar.yml  smoke.yml  task-groups.yml  unsupported-key.yml
tests/fixtures/build-customization/docker/: Dockerfile.multistage
tests/fixtures/build-failure-buildkit/: Dockerfile
tests/fixtures/build-secrets/: Dockerfile
tests/fixtures/build-ssh/: Dockerfile
tests/fixtures/readiness/: Dockerfile
