[workspace]
members = ["ratect-core", "dockerignore"]

[package]
name = "ratect"
version = "0.12.0-dev"
edition = "2021"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
tokio = { version = "1.52", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratect-core = { path = "ratect-core" }

[dev-dependencies]
portable-pty = "0.9.0"
