[workspace]
members = ["ratect-core", "dockerignore"]

# Carries two changes PR'd upstream (session providers on `build_image`, so one
# BuildKit build path serves secrets/ssh *and* streams build output —
# https://github.com/fussybeaver/bollard/pull/731; `ping_info`, exposing the
# daemon's advertised default builder —
# https://github.com/fussybeaver/bollard/pull/732) — see ROADMAP.md's 0.12.0
# entry. Cargo.lock pins the exact fork commit, so builds stay reproducible.
# Remove once both land in a bollard release.
[patch.crates-io]
bollard = { git = "https://github.com/or1can/bollard.git", branch = "ratect/session-providers-0.21" }

[package]
name = "ratect"
version = "0.18.0"
edition = "2021"
description = "A fast, lightweight Rust reimplementation of Batect: define development tasks in Docker containers once, run them anywhere"
license = "Apache-2.0"
repository = "https://github.com/or1can/ratect"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
tokio = { version = "1.52", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratect-core = { path = "ratect-core" }

[dev-dependencies]
portable-pty = "0.9.0"
