[workspace]
members = ["ratect", "ratect-compat", "ratect-core", "dockerignore"]
resolver = "2"

# Carries two changes PR'd upstream (session providers on `build_image`, so one
# BuildKit build path serves secrets/ssh *and* streams build output —
# https://github.com/fussybeaver/bollard/pull/731; `ping_info`, exposing the
# daemon's advertised default builder —
# https://github.com/fussybeaver/bollard/pull/732) — see ROADMAP.md's 0.12.0
# entry. Cargo.lock pins the exact fork commit, so builds stay reproducible.
# Remove once both land in a bollard release.
[patch.crates-io]
bollard = { git = "https://github.com/or1can/bollard.git", branch = "ratect/session-providers-0.21" }
