[package]
name = "ratect-core"
version = "0.13.0-dev"
edition = "2021"
description = "The core engine behind ratect: configuration parsing, task engine, and Docker integration"
license = "Apache-2.0"
repository = "https://github.com/or1can/ratect"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
noyalib = { version = "0.0.13", features = ["compat-serde-yaml"] }
bollard = { version = "0.21", features = ["buildkit_providerless", "chrono"] }
anyhow = "1.0"
futures = "0.3"
indicatif = "0.18"
tracing = "0.1"
async-recursion = "1.1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
tar = "0.4"
dockerignore = { path = "../dockerignore" }
path-clean = "1"
tokio = { version = "1.52", features = ["full"] }
crossterm = "0.29.0"
nix = { version = "0.31.3", features = ["user"] }
url = "2.5.8"
sha2 = "0.10"
toml = "0.8"
