[package]
name = "ratect-core"
version = "0.17.0-dev"
edition = "2021"
description = "The core engine behind ratect: configuration parsing, task engine, and Docker integration"
license = "Apache-2.0"
repository = "https://github.com/or1can/ratect"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
noyalib = { version = "0.0.13", features = ["compat-serde-yaml"] }
bollard = { version = "0.21", features = ["buildkit_providerless", "chrono", "ssl"] }
anyhow = "1.0"
futures = "0.3"
tracing = "0.1"
async-recursion = "1.1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
tar = "0.4"
dockerignore = { path = "../dockerignore" }
path-clean = "1"
tokio = { version = "1.52", features = ["full"] }
crossterm = "0.29.0"
nix = { version = "0.31.3", features = ["user"] }
url = "2.5.8"
sha2 = "0.10"
toml = "0.8"
regex = "1"
unicode-width = "0.2.2"
rustls = { version = "0.23", default-features = false }

# Cargo unifies features for a crate that's both a normal and a dev
# dependency, so this just adds `test-util` (needed for
# `#[tokio::test(start_paused = true)]`, engine.rs's concurrency-proof tests)
# on top of the `full` set above for test builds only — not linked into the
# real binary.
[dev-dependencies]
bytes = "1.12.1"
tokio = { version = "1.52", features = ["test-util"] }
