[package]
name = "ratect-core"
version = "0.21.0"
edition = "2021"
description = "The core engine behind ratect: configuration parsing, task engine, and Docker integration"
license = "Apache-2.0"
repository = "https://github.com/or1can/ratect"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
noyalib = { version = "0.0.15", features = ["compat-serde-yaml"] }
bollard = { version = "0.21", features = ["buildkit_providerless", "chrono", "ssl"] }
anyhow = "1.0"
futures = "0.3"
tracing = "0.1"
async-recursion = "1.1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
tar = "0.4"
dockerignore = { path = "../dockerignore" }
path-clean = "1"
tokio = { version = "1.52", features = ["full"] }
crossterm = "0.29.0"
nix = { version = "0.31.3", features = ["user"] }
url = "2.5.8"
sha2 = "0.11"
toml = "1.1"
regex = "1"
unicode-width = "0.2.2"
rustls = { version = "0.23", default-features = false }
# Both only ever built under the `schema` feature (below) — see
# src/schema.rs. `jsonschema` is used by that module's own tests only (it
# validates every fixture in the repository against the generated schema),
# but has to be declared here rather than in `[dev-dependencies]`, which
# Cargo doesn't allow to be optional — and making it unconditional would put
# a JSON-schema validator, and its transitive tree, in every `cargo test`
# run that has no use for it. `default-features = false` drops `reqwest` and
# a TLS stack: nothing here ever resolves a remote `$ref`.
schemars = { version = "1.2", optional = true }
jsonschema = { version = "0.48", optional = true, default-features = false }

[features]
# Generates the JSON schema for `batect.yml` (`src/schema.rs`) — a tooling
# concern, not a runtime one, so it's off by default and neither shipped
# binary carries the derived `JsonSchema` impls. CI turns it on via
# `--all-features`, which is what keeps the committed schema honest: the
# derive fails to compile if a new config field's type has no schema, and
# `schema::tests` fails if the committed file has drifted.
schema = ["dep:schemars", "dep:jsonschema"]

# Cargo unifies features for a crate that's both a normal and a dev
# dependency, so this just adds `test-util` (needed for
# `#[tokio::test(start_paused = true)]`, engine.rs's concurrency-proof tests)
# on top of the `full` set above for test builds only — not linked into the
# real binary.
[dev-dependencies]
bytes = "1.12.1"
tokio = { version = "1.52", features = ["test-util"] }
rcgen = "0.14"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
time = "0.3"
